[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voltage-ctrl"
version = "0.1.0"
description = "Multi-Channel Power Supply Controller"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "pyserial>=3.5",
    "numpy>=1.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]